force-app/main/default/objects/Configuracao__c/Configuracao__c.object-meta.xml
<CustomObject>
    <description>Armazena configurações e tokens para integração com o ERP.</description>
    <label>Configuração de API</label>
    <nameField>
        <label>Nome da Configuração</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurações de API</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>