force-app/main/default/objects/Configuracao__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Client ID para autenticação na API da Conta Azul.</description>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>