force-app/main/default/objects/Configuracao__c/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <description>Client Secret para autenticação na API da Conta Azul.</description>
    <label>Client Secret</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>