force-app/main/default/objects/Configuracao__c/fields/Data_Expiracao__c.field-meta.xml
<CustomField>
    <fullName>Data_Expiracao__c</fullName>
    <description>Data e hora em que o token de acesso atual expira.</description>
    <label>Data de Expiração</label>
    <type>DateTime</type>
</CustomField>