force-app/main/default/objects/Configuracao__c/fields/Data_Ultimo_Sincronismo__c.field-meta.xml
<CustomField>
    <fullName>Data_Ultimo_Sincronismo__c</fullName>
    <description>Data e hora em que a sincronização Conta Azul foi concluída com sucesso.</description>
    <label>Data Último Sincronismo</label>
    <type>DateTime</type>
</CustomField>