force-app/main/default/objects/Configuracao__c/fields/Heroku_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Heroku_API_Key__c</fullName>
    <description>Chave de API/token secreto para autenticação das chamadas do Salesforce para o Heroku.</description>
    <label>Heroku API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>