force-app/main/default/objects/Configuracao__c/fields/Heroku_URL__c.field-meta.xml
<CustomField>
    <fullName>Heroku_URL__c</fullName>
    <description>URL base da aplicação no Heroku (ex: https://c3c-workspace-app-7de7cd7f7af6.herokuapp.com).</description>
    <label>Heroku URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>