force-app/main/default/objects/Configuracao__c/fields/Mensagem_Erro_Sincronismo__c.field-meta.xml
<CustomField>
    <fullName>Mensagem_Erro_Sincronismo__c</fullName>
    <description>Mensagem de erro técnica gerada na última falha de sincronização.</description>
    <label>Mensagem Erro Sincronismo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>