force-app/main/default/objects/Configuracao__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <description>Refresh token para a API do ERP, usado para obter novos tokens de acesso.</description>
    <label>Refresh Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>