force-app/main/default/objects/Configuracao__c/fields/Status_Ultimo_Sincronismo__c.field-meta.xml
<CustomField>
    <fullName>Status_Ultimo_Sincronismo__c</fullName>
    <description>Status da última execução da sincronização Conta Azul (Sucesso ou Erro).</description>
    <label>Status Último Sincronismo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>