force-app/main/default/objects/Configuracao__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Token de acesso para a API do ERP.</description>
    <label>Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>